[tool.poetry]
name = "harbor-cves-harvester"
version = "0.1.0"
description = ""
authors = ["Ramiro Algozino <algozino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
rich = "^10.16.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
